--- a/src/Components/Professional/Education/Edu.css
+++ b/src/Components/Professional/Education/Edu.css
@@ -1,21 +1,45 @@
 .education {
-    padding: 50px;
-    background-color: #2c2f34; /* Matching background to blend with rest of the site */
-    color: #e0e0e0;
-  }
-  
-  .edu-content {
-    max-width: 800px;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  h1, h2 {
-    color: #81c784; /* Consistent with other headings for uniform design */
-  }
-  
-  p {
-    line-height: 1.8;
-    margin-bottom: 15px;
-  }
-  
+  padding: 40px;
+  background-color: #2c2f34; /* Background color */
+  color: #e0e0e0;
+}
+
+h1 {
+  font-size: 2em;
+  color: #81c784; /* Matches navbar title color */
+  margin-bottom: 20px;
+}
+
+/* Container for university header and logo */
+.edu-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* University text details */
+.edu-details {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.edu-details h2 {
+  font-size: 1.5em;
+  color: #c5e1a5;
+  margin-bottom: 10px;
+}
+
+.edu-details p {
+  font-size: 1em;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
+/* Logo styling */
+.edu-logo {
+  width: 300px; /* Adjust width as needed */
+  height: auto;
+  border-radius: 8px; /* Optional rounded corners */
+  margin-top: 0%;
+  margin-right: 3%;
+}
