--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -4,7 +4,7 @@
   top: 0;
   height: 100%;
   width: 270px;
-  background: #95d6b1;
+  background: #e8e8e8;
   padding: 25px;
   border-right: 1px solid #d1d9e0;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
